# adventofcode2019.c

./: .editorconfig  .gitignore  Readme.md  aoc_error.h  aoc_input.c  aoc_input.h  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  meson.build
